[tool.poetry]
name = "testpytomleexuankai"
version = "0.3.0"
description = ""
authors = ["joshua.jr <joshua.jr@bytedance.com>"]
readme = "README.md"
packages = [{include = "testpytomleexuankai"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
